# Upsonic

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test_publisher.yml
examples/browser-use/: cheapest_product_price_finder.py  investment_analyst.py  route_weather_checker.py  stocks_news_scraper.py  supermarket_price_comparator.py  wheather_query.py
examples/mcp/: code_reviewer_fixer.py  github-repo-analyzer.py  nearby_event_finder.py  on_the_road_museum_travel_planner.py
examples/others/: serpapi_keyword_trend_analyzer.py
src/upsonic/: __init__.py  exception.py  model_registry.py  reliability_processor.py  server_manager.py  tools.py
src/upsonic/canvas/: canvas.py
src/upsonic/client/: base.py  graph.py  language.py  price.py  printing.py  trace.py
src/upsonic/client/agent_configuration/: agent_configuration.py
src/upsonic/client/direct_llm_call/: direct_llm_cal.py
src/upsonic/client/knowledge_base/: knowledge_base.py
src/upsonic/client/level_one/: call.py
src/upsonic/client/level_two/: agent.py
src/upsonic/client/level_utilized/: utility.py
src/upsonic/client/storage/: storage.py
src/upsonic/client/tasks/: task_response.py  tasks.py
src/upsonic/client/team/: team.py
src/upsonic/client/tools/: tools.py
src/upsonic/context/: agent.py  context.py  default_prompt.py  task.py
src/upsonic/direct/: direct_llm_cal.py
src/upsonic/graph/: graph.py
src/upsonic/knowledge_base/: knowledge_base.py
src/upsonic/memory/: memory.py  memory_manager.py
src/upsonic/models/: model_registry.py
src/upsonic/multi_agent/: multi_agent.py
src/upsonic/reliability_layer/: reliability_layer.py
src/upsonic/server/: __init__.py  api.py
src/upsonic/server/level_one/: call.py
src/upsonic/server/level_one/server/: server.py
src/upsonic/server/level_two/: agent.py
src/upsonic/server/level_two/server/: server.py
src/upsonic/server/level_utilized/: utility.py
src/upsonic/server/level_utilized/bu/: browseruse.py
src/upsonic/server/level_utilized/cu/: __init__.py  computer.py
src/upsonic/server/tools/: server.py
src/upsonic/storage/: configuration.py  folder.py
src/upsonic/tasks/: tasks.py
src/upsonic/team/: __init__.py  context_sharing.py  result_combiner.py  task_assignment.py  team.py
src/upsonic/tools_server/: function_client.py  tools_client.py
src/upsonic/tools_server/server/: api.py  function_tools.py  server_utils.py  tools.py
src/upsonic/utils/: error_wrapper.py  model_set.py  printing.py
src/upsonic/utils/direct_llm_call/: agent_creation.py  agent_tool_register.py  llm_usage.py  model.py  task_end.py  task_response.py  task_start.py  tool_usage.py
src/upsonic/utils/package/: exception.py  get_version.py
tests/: __init__.py  test_do.py
tests/client/: test_call.py
